Migrate tslint to eslint
Test Plan: eslint

Differential Revision: https://dagster.phacility.com/D651

--- a/js_modules/dagit/package.json
+++ b/js_modules/dagit/package.json
@@ -62,13 +62,18 @@
     "@types/react-virtualized": "^9.18.11",
     "@types/ws": "^6.0.1",
     "@types/yaml": "^1.0.0",
+    "@typescript-eslint/eslint-plugin": "^1.12.0",
+    "@typescript-eslint/parser": "^1.12.0",
     "apollo": "^2.3.1",
     "babel-core": "^6.23.0",
     "babel-jest": "^24.8.0",
     "babel-plugin-graphql-tag": "^1.6.0",
     "child-process": "^1.0.2",
+    "eslint": "^6.0.1",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "jest": "^23.6.0",
-    "prettier": "^1.14.0",
+    "prettier": "^1.18.2",
     "react-scripts-ts": "^4.0.8",
     "react-test-renderer": "^16.4.2",
     "ts-jest": "^23.1.4",
@@ -82,6 +87,7 @@
     "build": "react-scripts-ts build",
     "build-for-python": "yarn run build && cd ../../python_modules/dagit/dagit && rm -rf webapp && mkdir -p webapp && cp -r ../../../js_modules/dagit/build ./webapp/ && mkdir -p webapp/build/vendor/graphql-playground && cp ../../../js_modules/dagit/node_modules/graphql-playground-react/build/static/css/index.css webapp/build/vendor/graphql-playground/index.css && cp ../../../js_modules/dagit/node_modules/graphql-playground-react/build/favicon.png webapp/build/vendor/graphql-playground/favicon.png && cp ../../../js_modules/dagit/node_modules/graphql-playground-react/build/static/js/middleware.js webapp/build/vendor/graphql-playground/middleware.js",
     "eject": "react-scripts-ts eject",
+    "lint": "eslint src/",
     "prettier": "prettier --write \"./src/**/*.tsx\"",
     "test": "yarn run ts && yarn run jest && yarn run check-prettier",
     "jest": "jest -w 1",
